--- a/src/app/pages/plans-work/list/list.component.html
+++ b/src/app/pages/plans-work/list/list.component.html
@@ -101,7 +101,7 @@
                                                                 <div class="col-lg-2 col" (click)="comenzar(data.id)">
                                                                     <div class="progress progress-xl">
                                                                         <div class="progress-bar" 
-                                                                        [ngClass]="{'bg-danger': data.id > 0 && data.id < 25, 'bg-warning': data.id > 25 && data.id < 75, 'bg-success': data.id > 75 }" role="progressbar" [style]="data.id > 0 ? 'width:'+data.id+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{data.id}}1%</div>
+                                                                        [ngClass]="{'bg-danger': data.avance > 0 && data.avance < 25, 'bg-warning': data.avance > 25 && data.avance < 75, 'bg-success': data.avance > 75 }" role="progressbar" [style]="data.avance > 0 ? 'width:'+data.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{data.avance}}%</div>
                                                                     </div>
                                                                 </div>
         
@@ -117,7 +117,7 @@
                                                                 <div class="col-lg-1 col" (click)="comenzar(data.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1" style="font-size: 24px;"><b>0%</b></h5>
+                                                                            <h5 class="mb-1" style="font-size: 24px;"><b>{{data.avance}}%</b></h5>
                                                                             <p>Avance</p>
                                                                         </div>
                                                                     </div>
@@ -228,7 +228,7 @@
                                                                 <div class="col-lg-2 col" (click)="comenzar(data2.id)">
                                                                     <div class="progress progress-xl">
                                                                         <div class="progress-bar" 
-                                                                        [ngClass]="{'bg-danger': data2.id > 0 && data2.id < 25, 'bg-warning': data2.id > 25 && data2.id < 75, 'bg-success': data2.id > 75 }" role="progressbar" [style]="data2.id > 0 ? 'width:'+data2.id+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{data2.id}}1%</div>
+                                                                        [ngClass]="{'bg-danger': data2.avance > 0 && data2.avance < 25, 'bg-warning': data2.avance > 25 && data2.avance < 75, 'bg-success': data2.avance > 75 }" role="progressbar" [style]="data2.avance > 0 ? 'width:'+data2.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{data2.avance}}%</div>
                                                                     </div>
                                                                 </div>
         
@@ -244,7 +244,7 @@
                                                                 <div class="col-lg-1 col" (click)="comenzar(data2.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1" style="font-size: 24px;"><b>0%</b></h5>
+                                                                            <h5 class="mb-1" style="font-size: 24px;"><b>{{data2.avance.toFixed(0)}}%</b></h5>
                                                                             <p>Avance</p>
                                                                         </div>
                                                                     </div>
