--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -38,7 +38,7 @@
         <div class="card-body">
           
           <div class="row g-0 mb-3 text-center">
-            <div class="col-md-4">
+            <div class="col-md-3">
                     <h6>CUMPLIMIENTO</h6>
                     
                     <div class="col-lg-12 col">
@@ -46,14 +46,22 @@
                     </div>
             </div>
             
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h6>FECHA EVALUACIÓN</h6>
                 {{articulo.evaluations && articulo.evaluations.fecha_evaluacion ? (articulo.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : (evaluation.fechaFinalizacion | date:"dd-MM-yy") }}
             </div>
             
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h6>RESPONSABLE</h6>
                 {{articulo.evaluations && articulo.evaluations.evaluador && articulo.evaluations.evaluador.nombre ? articulo.evaluations.evaluador.nombre + ' ' + articulo.evaluations.evaluador.apellido : (evaluation.evaluador && evaluation.evaluador.nombre ? evaluation.evaluador.nombre + ' ' + evaluation.evaluador.apellido : '-') }}
+            </div>
+
+            <div class="col-md-3">
+                <h6>NOTIFICACIONES</h6>
+                <div class="form-check form-switch form-switch-right form-switch-md">
+                    <label for="default" class="form-label text-muted">Activar</label>
+                    <input class="form-check-input code-switcher" type="checkbox" id="default" [checked]="articulo && articulo.evaluations && articulo.evaluations.notificaciones ? articulo.evaluations.notificaciones : false " (click)="activeNotify($event, articulo.evaluations.id)">
+                </div>
             </div>
             
           </div>
