--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -937,19 +937,22 @@ sistema.</p>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
+                    <label for="periodicidad-field" class="form-label">Periodicidad</label>
+                </div>
                 <div class="col-lg-6">
                     <div class="mt-4 mt-lg-0">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="7">
-                            <label class="form-check-label" for="periocidad">7 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="7">
+                            <label class="form-check-label" for="periodicidad">7 días</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="30">
-                            <label class="form-check-label" for="periocidad">30 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="30">
+                            <label class="form-check-label" for="periodicidad">30 días</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="180">
-                            <label class="form-check-label" for="periocidad">180 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="180">
+                            <label class="form-check-label" for="periodicidad">180 días</label>
                         </div>
                     </div>
                 </div>
@@ -957,16 +960,16 @@ sistema.</p>
                 <div class="col-lg-6">
                     <div class="mt-4 mt-lg-0">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="15">
-                            <label class="form-check-label" for="periocidad">15 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="15">
+                            <label class="form-check-label" for="periodicidad">15 días</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="60">
-                            <label class="form-check-label" for="periocidad">60 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="60">
+                            <label class="form-check-label" for="periodicidad">60 días</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="periocidad" id="periocidad" formControlName="periocidad" value="365">
-                            <label class="form-check-label" for="periocidad">365 días</label>
+                            <input class="form-check-input" type="radio" name="periodicidad" id="periodicidad" formControlName="periodicidad" value="365">
+                            <label class="form-check-label" for="periodicidad">365 días</label>
                         </div>
                     </div>
                 </div>
