--- a/src/app/pages/plans-work/list/list.component.html
+++ b/src/app/pages/plans-work/list/list.component.html
@@ -54,7 +54,7 @@
                                 </div>
                                 <div class="card-body">
                                 <ng-container *ngFor="let data of w.planes">
-                                    <div class="list-group">
+                                    <div class="list-group" id="pl1_{{data.id}}">
         
                                             <div class="team-list list-view-filter row" style="cursor:pointer;">
                                                 <div class="col">
@@ -80,7 +80,7 @@
                                                                     </div>
                                                                 </div>
                                                                 
-                                                                <div class="col-lg-3 col" (click)="comenzar(data.id)">
+                                                                <div class="col-lg-2 col" (click)="comenzar(data.id)">
                                                                     <div class="row text-muted text-left">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1" style="color: #405189;"><b>{{data.installationId > 0 ? data.installation_work_plan.nombre
@@ -121,6 +121,13 @@
                                                                             <p>Avance</p>
                                                                         </div>
                                                                     </div>
+                                                                </div>
+                                                                
+                                                                <div class="col-lg-1 col text-center">
+                                                                    <span
+                                                                            [style.cursor]="'pointer'" (click)="confirm(deleteModel,data.id)">
+                                                                            <i class="ri-delete-bin-line"></i>
+                                                                    </span>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -207,7 +214,7 @@
                                                                     </div>
                                                                 </div>
                                                                 
-                                                                <div class="col-lg-3 col" (click)="comenzar(data2.id)">
+                                                                <div class="col-lg-2 col" (click)="comenzar(data2.id)">
                                                                     <div class="row text-muted text-left">
                                                                         <div class="col-12 border-end border-end-dashed">
                                                                             <h5 class="mb-1" style="color: #405189;"><b>{{data2.installationId > 0 ? data2.installation_work_plan.nombre
@@ -219,7 +226,7 @@
                                                                 <div class="col-lg-2 col" (click)="comenzar(data2.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1" style="color: #405189;">{{ data2.createdAt | date: 'd/M/yyyy' }}</h5>
+                                                                            <h5 class="mb-1" style="color: #405189;">{{ data2.fecha_inicio | date: 'd/M/yyyy' }}</h5>
                                                                             <p class="text-muted mb-0">Inicio</p>
                                                                         </div>
                                                                     </div>
@@ -235,7 +242,7 @@
                                                                 <div class="col-lg-2 col" (click)="comenzar(data2.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1" style="color: #405189;">{{ data2.updatedAt ? (data2.updatedAt | date: 'd/M/yyyy') : '-' }}</h5>
+                                                                            <h5 class="mb-1" style="color: #405189;">{{ data2.fecha_termino ? (data2.fecha_termino | date: 'd/M/yyyy') : '-' }}</h5>
                                                                             <p class="text-muted mb-0">Término</p>
                                                                         </div>
                                                                     </div>
@@ -248,6 +255,13 @@
                                                                             <p>Avance</p>
                                                                         </div>
                                                                     </div>
+                                                                </div>
+                                                                
+                                                                <div class="col-lg-1 col text-center">
+                                                                    <span
+                                                                            [style.cursor]="'pointer'" (click)="confirm(deleteModel,data2.id)">
+                                                                            <i class="ri-delete-bin-line"></i>
+                                                                    </span>
                                                                 </div>
                                                             </div>
                                                         </div>
